# PythonWeb

HomeWork_02/: setup.py
HomeWork_02/free_assist/: address_book.py  cli_commands.py  commands.py  folder_sort.py  function.py  main.py  notes.py  prompt.py
HomeWork_02/free_assist/abstraction/: cli.py  command.py  commands.py  data.py  interface.py
HomeWork_03/: .dockerignore  dockerfile  pyproject.toml  requirements.txt
HomeWork_03/free_assist/: __main__.py  address_book.py  cli_interface.py  commands.py  folder_sort.py  function.py
HomeWork_03/free_assist/abstraction/: command.py  data.py
HomeWork_04/: pyproject.toml
HomeWork_04/homework_04/: folder_sort.py  folder_sort_thr.py
HomeWork_04/sort_folder/: folder_sort.py  main.py
HomeWork_05/: main.py  pyproject.toml
HomeWork_06/: pyproject.toml
HomeWork_06/sort_folder/: Test.py  __main__.py  folder_sort.py  main.py
HomeWork_07/: pyproject.toml  simple_client.py  simple_server.py
HomeWork_08/: HomeWork_08.sql  connection.py  easy_table.py  gen_test_data.py  hw_08.db  main.py  pyproject.toml  queries.py
HomeWork_09/: commands.py  function.py  main.py  pyproject.toml
HomeWork_09/database/: assist.db  db.py  db_models.py  gen_test_data.py
HomeWork_09/migrations/: env.py
HomeWork_09/migrations/versions/: 53c00516b68f_delete_contact_description.py  738fb6728d81_init.py  a7dda3219fcd_add_contact_description.py
HomeWork_09/repository/: contacts.py  notes.py
HomeWork_10/: pyproject.toml
HomeWork_10/app/: __init__.py  db_models.py  function.py  routes.py
HomeWork_10/app/repository/: contacts.py  notes.py
HomeWork_10/app/static/: style.css
HomeWork_10/app/templates/pages/: contacts.html  index.html  notes.html
HomeWork_10/config/: config.py
HomeWork_11/: pyproject.toml
HomeWork_11/app/: __init__.py  db_models.py  routes.py
HomeWork_11/app/repository/: contacts.py  notes.py
HomeWork_11/app/static/: style.css
HomeWork_11/app/templates/: base.html
HomeWork_11/app/templates/pages/: contacts.html  notes.html  test_click.html
HomeWork_11/config/: config.py
HomeWork_11/database/: assist.db
HomeWork_11/migrations/versions/: 3167b84db4e1_initial_migration.py
HomeWork_13/: manage.py  pyproject.toml
HomeWork_13/HomeWork_13/: asgi.py  settings.py  urls.py  wsgi.py
HomeWork_13/fin_assist/: admin.py  apps.py  models.py  urls.py  views.py
HomeWork_13/fin_assist/migrations/: 0001_initial.py
HomeWork_13/templates/fin_assist/: base.html  index.html  pay_categories.html
