[tool.poetry]
name = "homework-08"
version = "0.1.0"
description = ""
authors = ["YpL68 <yuriy.plks@gmail.com>"]
readme = "README.md"
packages = [{include = "homework_08"}]

[tool.poetry.dependencies]
python = "^3.10"
faker = "^15.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
