[tool.poetry]
name = "homework-09"
version = "0.1.0"
description = ""
authors = ["YpL68 <yuriy.plks@gmail.com>"]
readme = "README.md"
packages = [{include = "homework_09"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^1.4.44"
alembic = "^1.8.1"
faker = "^15.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
