[tool.poetry]
name = "homework-10"
version = "0.1.0"
description = ""
authors = ["YpL68 <yuriy.plks@gmail.com>"]
readme = "README.md"
packages = [{include = "homework_10"}]

[tool.poetry.dependencies]
python = "^3.10"
pymongo = "^4.3.3"
redis-lru = "^0.1.2"
flask = "^2.2.2"
python-dotenv = "^0.21.0"
faker = "^15.3.4"
flask-mongoengine = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
